Last.fm: Fix library bar text readability

--- a/styles/lastfm/catppuccin.user.less
+++ b/styles/lastfm/catppuccin.user.less
@@ -653,11 +653,11 @@
 
     .chartlist-count-bar-slug {
       background-color: transparent !important;
-      background-image: linear-gradient(to right, @accent, @accent);
+      background-image: linear-gradient(to right, fade(@accent, 20%), fade(@accent, 20%));
       color: @crust;
     }
     .chartlist-count-bar-value {
-      color: @crust;
+      color: @text;
     }
     a:focus .chartlist-count-bar-slug,
     a:hover .chartlist-count-bar-slug {
